--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -51,4 +54,9 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.15"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 }
